Add reggressor to the train.py for item models

--- a/1_features_and_models.ipynb
+++ b/1_features_and_models.ipynb
@@ -1044,12 +1044,14 @@
    "source": [
     "# XGboost\n",
     "\n",
-    "We will make a small XGBoost model to account for more recent variations in the data. The basic approach is to used lagged variables here along with some date values."
+    "We will make a small XGBoost model to account for more recent variations in the data. The basic approach is to used lagged variables here along with some date values.\n",
+    "\n",
+    "The correlations look good bu time is up..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "eb0d04d8-efec-40a5-bc71-a9a9c7846776",
    "metadata": {},
    "outputs": [],
@@ -1064,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "8a75b415-2df2-4aca-add7-0c15e5c01354",
    "metadata": {},
    "outputs": [],
@@ -1083,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "id": "58d44b92-96f8-4860-98f3-a205da329be6",
    "metadata": {},
    "outputs": [
@@ -1110,18 +1112,14 @@
     "item_list = list(df_sales.item_name.unique())\n",
     "\n",
     "for item in item_list:\n",
-    "    item_sales = train_df[train_df.item_name==item]\n",
-    "    \n",
-    "    # backshift on the whole series to include past values on our validation set\n",
-    "    \n",
-    "    itemTrain_df = item_sales[item_sales.split=='train']\n",
-    "    itemVal_df = item_sales[item_sales.split=='validation']\n",
-    "    \n",
+    "    itemTrain_df = train_df[train_df.item_name==item]\n",
+    "    itemVal_df = val_df[val_df.item_name==item]\n",
+    " \n",
     "    itemTrain_df = backshift_df(itemTrain_df, ['sales_quantity'], 1, 8)\n",
     "    itemTrain_df = add_date_features(itemTrain_df, 'day')\n",
     "    \n",
     "    \n",
-    "    itemVal_df = \n",
+    "    itemVal_df = backshift_df(itemVal_df, ['sales_quantity'], 1, 8)\n",
     "    itemVal_df = add_date_features(itemVal_df, 'day')"
    ]
   },
@@ -1166,11 +1164,434 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e7de79b5-d48e-4eb3-871b-2a7a223ec755",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['item_name', 'day', 'item_number', 'purchase_price',\n",
+       "       'suggested_retail_price', 'orders_quantity', 'sales_quantity',\n",
+       "       'revenue', 'split', 'prediction', 'sales_quantity_1',\n",
+       "       'sales_quantity_2', 'sales_quantity_3', 'sales_quantity_4',\n",
+       "       'sales_quantity_5', 'sales_quantity_6', 'sales_quantity_7',\n",
+       "       'sales_quantity_8', 'year', 'month', 'day_number', 'dayofyear',\n",
+       "       'dayofweek', 'weekofyear', 'is_weekend'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "itemTrain_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "56f2e828-61c3-4b93-99cc-cd95c5b65a4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>day</th>\n",
+       "      <th>item_number</th>\n",
+       "      <th>purchase_price</th>\n",
+       "      <th>suggested_retail_price</th>\n",
+       "      <th>orders_quantity</th>\n",
+       "      <th>sales_quantity</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>split</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>...</th>\n",
+       "      <th>sales_quantity_6</th>\n",
+       "      <th>sales_quantity_7</th>\n",
+       "      <th>sales_quantity_8</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day_number</th>\n",
+       "      <th>dayofyear</th>\n",
+       "      <th>dayofweek</th>\n",
+       "      <th>weekofyear</th>\n",
+       "      <th>is_weekend</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>626</th>\n",
+       "      <td>UH ZWIEBELN DE-HE I 1KG GS</td>\n",
+       "      <td>2021-04-03</td>\n",
+       "      <td>80028349</td>\n",
+       "      <td>0.674928</td>\n",
+       "      <td>1.055314</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>22.77</td>\n",
+       "      <td>train</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>93</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>627</th>\n",
+       "      <td>UH ZWIEBELN DE-HE I 1KG GS</td>\n",
+       "      <td>2021-04-04</td>\n",
+       "      <td>80028349</td>\n",
+       "      <td>0.674928</td>\n",
+       "      <td>1.055314</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>train</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>94</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>628</th>\n",
+       "      <td>UH ZWIEBELN DE-HE I 1KG GS</td>\n",
+       "      <td>2021-04-05</td>\n",
+       "      <td>80028349</td>\n",
+       "      <td>0.674928</td>\n",
+       "      <td>1.055314</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>train</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>629</th>\n",
+       "      <td>UH ZWIEBELN DE-HE I 1KG GS</td>\n",
+       "      <td>2021-04-06</td>\n",
+       "      <td>80028349</td>\n",
+       "      <td>0.610000</td>\n",
+       "      <td>0.790000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>20.54</td>\n",
+       "      <td>train</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>96</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630</th>\n",
+       "      <td>UH ZWIEBELN DE-HE I 1KG GS</td>\n",
+       "      <td>2021-04-07</td>\n",
+       "      <td>80028349</td>\n",
+       "      <td>0.610000</td>\n",
+       "      <td>0.790000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>15.01</td>\n",
+       "      <td>train</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>97</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>894</th>\n",
+       "      <td>UH ZWIEBELN DE-HE I 1KG GS</td>\n",
+       "      <td>2021-12-27</td>\n",
+       "      <td>80028349</td>\n",
+       "      <td>0.640000</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>24.72</td>\n",
+       "      <td>train</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>12</td>\n",
+       "      <td>27</td>\n",
+       "      <td>361</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>895</th>\n",
+       "      <td>UH ZWIEBELN DE-HE I 1KG GS</td>\n",
+       "      <td>2021-12-28</td>\n",
+       "      <td>80028349</td>\n",
+       "      <td>0.640000</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>23.64</td>\n",
+       "      <td>train</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>12</td>\n",
+       "      <td>28</td>\n",
+       "      <td>362</td>\n",
+       "      <td>1</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>896</th>\n",
+       "      <td>UH ZWIEBELN DE-HE I 1KG GS</td>\n",
+       "      <td>2021-12-29</td>\n",
+       "      <td>80028349</td>\n",
+       "      <td>0.640000</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>20.79</td>\n",
+       "      <td>train</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>12</td>\n",
+       "      <td>29</td>\n",
+       "      <td>363</td>\n",
+       "      <td>2</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>897</th>\n",
+       "      <td>UH ZWIEBELN DE-HE I 1KG GS</td>\n",
+       "      <td>2021-12-30</td>\n",
+       "      <td>80028349</td>\n",
+       "      <td>0.640000</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>45.40</td>\n",
+       "      <td>train</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>12</td>\n",
+       "      <td>30</td>\n",
+       "      <td>364</td>\n",
+       "      <td>3</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>898</th>\n",
+       "      <td>UH ZWIEBELN DE-HE I 1KG GS</td>\n",
+       "      <td>2021-12-31</td>\n",
+       "      <td>80028349</td>\n",
+       "      <td>0.640000</td>\n",
+       "      <td>0.990000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>13.86</td>\n",
+       "      <td>train</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>12</td>\n",
+       "      <td>31</td>\n",
+       "      <td>365</td>\n",
+       "      <td>4</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>273 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      item_name        day  item_number  purchase_price  \\\n",
+       "626  UH ZWIEBELN DE-HE I 1KG GS 2021-04-03     80028349        0.674928   \n",
+       "627  UH ZWIEBELN DE-HE I 1KG GS 2021-04-04     80028349        0.674928   \n",
+       "628  UH ZWIEBELN DE-HE I 1KG GS 2021-04-05     80028349        0.674928   \n",
+       "629  UH ZWIEBELN DE-HE I 1KG GS 2021-04-06     80028349        0.610000   \n",
+       "630  UH ZWIEBELN DE-HE I 1KG GS 2021-04-07     80028349        0.610000   \n",
+       "..                          ...        ...          ...             ...   \n",
+       "894  UH ZWIEBELN DE-HE I 1KG GS 2021-12-27     80028349        0.640000   \n",
+       "895  UH ZWIEBELN DE-HE I 1KG GS 2021-12-28     80028349        0.640000   \n",
+       "896  UH ZWIEBELN DE-HE I 1KG GS 2021-12-29     80028349        0.640000   \n",
+       "897  UH ZWIEBELN DE-HE I 1KG GS 2021-12-30     80028349        0.640000   \n",
+       "898  UH ZWIEBELN DE-HE I 1KG GS 2021-12-31     80028349        0.640000   \n",
+       "\n",
+       "     suggested_retail_price  orders_quantity  sales_quantity  revenue  split  \\\n",
+       "626                1.055314              0.0            23.0    22.77  train   \n",
+       "627                1.055314              0.0             0.0     0.00  train   \n",
+       "628                1.055314              0.0             0.0     0.00  train   \n",
+       "629                0.790000              0.0            26.0    20.54  train   \n",
+       "630                0.790000              0.0            19.0    15.01  train   \n",
+       "..                      ...              ...             ...      ...    ...   \n",
+       "894                0.990000              0.0            25.0    24.72  train   \n",
+       "895                0.990000              0.0            24.0    23.64  train   \n",
+       "896                0.990000              0.0            21.0    20.79  train   \n",
+       "897                0.990000              0.0            46.0    45.40  train   \n",
+       "898                0.990000              0.0            14.0    13.86  train   \n",
+       "\n",
+       "     prediction  ...  sales_quantity_6  sales_quantity_7  sales_quantity_8  \\\n",
+       "626         NaN  ...               NaN               NaN               NaN   \n",
+       "627         NaN  ...               NaN               NaN               NaN   \n",
+       "628         NaN  ...               NaN               NaN               NaN   \n",
+       "629         NaN  ...               NaN               NaN               NaN   \n",
+       "630         NaN  ...               NaN               NaN               NaN   \n",
+       "..          ...  ...               ...               ...               ...   \n",
+       "894        40.0  ...              43.0              40.0               0.0   \n",
+       "895        43.0  ...              85.0              43.0              40.0   \n",
+       "896        85.0  ...              71.0              85.0              43.0   \n",
+       "897        71.0  ...               8.0              71.0              85.0   \n",
+       "898         8.0  ...               0.0               8.0              71.0   \n",
+       "\n",
+       "     year  month  day_number  dayofyear  dayofweek  weekofyear  is_weekend  \n",
+       "626  2021      4           3         93          5          13           1  \n",
+       "627  2021      4           4         94          6          13           1  \n",
+       "628  2021      4           5         95          0          14           0  \n",
+       "629  2021      4           6         96          1          14           0  \n",
+       "630  2021      4           7         97          2          14           0  \n",
+       "..    ...    ...         ...        ...        ...         ...         ...  \n",
+       "894  2021     12          27        361          0          52           0  \n",
+       "895  2021     12          28        362          1          52           0  \n",
+       "896  2021     12          29        363          2          52           0  \n",
+       "897  2021     12          30        364          3          52           0  \n",
+       "898  2021     12          31        365          4          52           0  \n",
+       "\n",
+       "[273 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "itemTrain_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00385b88-f069-479c-89e8-53e5f5f6cb17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "b63379a3-44ff-4b2f-98fd-c5a25e62d94f",
    "metadata": {},
    "source": [
-    "# Ensemble"
+    "# Ensemble\n",
+    "\n",
+    "Here the idea was to make an ensemble of the models whi"
    ]
   },
   {
