--- a/1_features_and_models.ipynb
+++ b/1_features_and_models.ipynb
@@ -1591,7 +1591,7 @@
    "source": [
     "# Ensemble\n",
     "\n",
-    "Here the idea was to make an ensemble of the models whi"
+    "Here the idea was to make an ensemble of the models which is likely to make for a better model."
    ]
   },
   {
